--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -31,6 +31,9 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 =====Usage notes=====
 * This is a [[catenative]] verb that takes the ''to infinitive''. See [[Appendix:English catenative verbs]]
 
+=====Conjugation=====
+{{en-conj|choose|chose|chosen|choosing}}
+
 =====Related terms=====
 * {{l|en|choice}}
 * {{l|en|choosey}}
