--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -60,8 +60,8 @@
 
 ====Readings====
 {{ja-readings
-|goon=しょう
-|kanon=しょう
+|goon=しょう<せう
+|kanon=しょう<せう
 |kun=あき-らか
 |nanori=あき, あきら, かず, かずみ, てる
 }}
