--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -152,6 +152,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 * Venetian: {{t|vec|oliva|f}}, {{t|vec|ołiva|f}}
 * Vietnamese: {{t|vi|ô liu}}
 * Volapük: {{t+|vo|learafluk}}
+* Walloon: {{t|wa|olive|f}}
 * Welsh: {{t|cy|olewydd|f-p}}
 * Yiddish: {{t|yi|אָליוו|m}}, {{t|yi|מאַסלינע|f}}
 * Zazaki: {{t|zza|zeytun|f}}
