--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -113,6 +113,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 * Middle English: {{t|enm|olyve}}
 * Middle Persian: {{t|pal|𐭦𐭩𐭲𐭩|ts=zayt}}
 * Mongolian: {{t|mn|чидун жимс|sc=Cyrl}}
+* Moroccan Amazigh: {{t|zgh|ⵜⴰⵣⵉⵜⵓⵏⵜ|f|tr=tazitunt}} {{qualifier|countable singular}}
 * Ngizim: {{t|ngi|zatun}}
 * Norwegian: {{t|no|oliven}}
 * Occitan: {{t+|oc|oliva|f}}
