--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -357,6 +357,8 @@ Borrowed from {{bor|ro|fr|blond}}.
 ----
 
 ==Swedish==
+===Etymology===
+From {{bor|sv|fr|blond}}
 
 ===Pronunciation===
 * {{audio|sv|Sv-blond.ogg|audio}}
