--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -80,7 +80,10 @@
 ==Korean==
 
 ===Etymology 1===
-From {{der|ko|ltc|-}} {{ltc-l|傀|id=2}}. {{hanja-hunmong|괴〯|kwoy|人類#중03A}}
+From {{der|ko|ltc|-}} {{ltc-l|傀|id=2}}. {{hanja-hunmong|괴〯|kwǒy|人類#중03A}}
+
+====Pronunciation====
+{{ko-hanja-pron|괴|kø̞ː|궤|kwe̞ː|alt=y}}
 
 ====Hanja====
 {{ko-hanja-search}}
