--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -27,7 +27,7 @@
 |c=ngong4,ngong5
 |c_note=ngong5 - variant
 |h=pfs=ngòng;gd=ngong1
-|mn=xm,qz,tw:gông/zz:gâng
+|mn=xm,qz,tw:gông/zz:gâng/twv:không
 |mn-t=ngang1
 |mc=y
 |oc=y
