--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -236,8 +236,9 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Galician: {{t|gl|conta|f}}, {{t+|gl|conto|m}}, {{t|gl|reconto|m}}
 * German: {{t+|de|zählen}}
 * Greek: {{t+|el|μέτρημα|n}}, {{t+|el|μέτρηση|f}}, {{t+|el|καταμέτρηση|f}}
-* Icelandic: {{t|is|talning|f}}
+* Hungarian: {{t|hu|összeszámlálás}}, {{t+|hu|megszámlálás}}, {{t+|hu|számolás}}
 {{trans-mid}}
+* Icelandic: {{t|is|talning|f}}
 * Italian: {{t+|it|conto|m}}, {{t+|it|conteggio|m}}, {{t+|it|calcolo|m}}
 * Norwegian:
 *: Bokmål: {{t|nb|opptelling|m|f}}, {{t|nb|telling|m|f}}
@@ -265,8 +266,9 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 *: Old French: {{t|fro|conte}}
 * Galician: {{t|gl|conta|f}}
 * German: {{t+|de|Anzahl|f}}
-* Icelandic: {{t+|is|tala|f}}
+* Hungarian: {{t+|hu|összeg}}, {{t+|hu|szám}}
 {{trans-mid}}
+* Icelandic: {{t+|is|tala|f}}
 * Ido: {{t+|io|konto}}
 * Italian: {{t+|it|totale|m}}, {{t+|it|numero}}
 * Kyrgyz: {{t+|ky|эсеп}}
@@ -291,6 +293,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Finnish: {{t+|fi|lähtölaskenta}}
 * French: {{t+|fr|compte à rebours}}, {{t+|fr|décompte|m}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|visszaszámlálás}}
 * Macedonian: {{t|mk|одбројување|n}}
 * Polish: {{t+|pl|odliczanie|n}}
 * Portuguese: {{t|pt|contagem final|f}}
@@ -304,6 +307,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * French: {{t+|fr|chef d'accusation|m}}, {{t+|fr|chef d’inculpation|m}}
 * Greek: {{t+|el|κατηγορία|f}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|vádpont}}, {{t|hu|rendbeli}}
 * Irish: {{t|ga|scór|m}}
 * Spanish: {{t+|es|punto|m}}, {{t+|es|cargo|m}}
 * Swedish: {{t|sv|anklagelsepunkt|c}}, {{t+|sv|åtalspunkt|c}}
