--- a/en/旮/旮.16918.wikitext
+++ b/en/旮/旮.16918.wikitext
@@ -11,27 +11,35 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=卡-Cantonese}}
 
 ===Etymology 1===
+The printed form was found in {{w|Ernü Yingxiong Zhuan|兒女英雄傳}}.
 
 ====Pronunciation====
 {{zh-pron
 |m=gā
-|c=go1
+|m_note=gā: vernacular
+|c=go1, ka1
+|c_note=ka1: vernacular
 |cat=
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{zh-only|旮旯}}
+# {{zh-alt form|角|cursive form}}
+## {{zh-only|旮旯}}
 
 ====Compounds====
-{{zh-der|山旮旯子|旮旯兒|旮旯}}
+{{zh-der|旮旯兒|旮旯|山旮旯}}
 
 ===Etymology 2===
 {{zh-see|旭|v}}
+
+===References===
+* [http://jonathanovsky.wordpress.com/2015/02/10/「山卡啦」點寫？/ 「山卡啦」點寫？]
+* [http://web.archive.org/web/20180315215817/http://dlib.zslib.com.cn/qklw/rdzl/B201-250/RD082306 “旮旯”议]
 
 ----
 
