--- a/en/旮/旮.16918.wikitext
+++ b/en/旮/旮.16918.wikitext
@@ -32,7 +32,7 @@ The printed form was found in {{w|Ernü Yingxiong Zhuan|兒女英雄傳}}.
 ## {{zh-only|旮旯}}
 
 ====Compounds====
-{{zh-der|旮旯兒|旮旯|山旮旯}}
+{{zh-der|旮旯}}
 
 ===Etymology 2===
 {{zh-see|旭|v}}
