--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -146,6 +146,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Catalan: {{t+|ca|parlar}}
 * Central Atlas Tamazight: {{t|tzm|sawl}}, {{t|tzm|ssiwel}}
 * Chechen: {{t|ce|лен}}
+* Chickasaw: {{t|cic|anompoli}}
 * Chinese:
 *: Cantonese: {{t|yue|講}}, {{t|yue|讲|tr=gong2}}
 *: Dungan: {{t|dng|фә}}, {{t|dng|шә}}
