--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -156,6 +156,40 @@ A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的|tr=de}} afte
 
 ----
 
+==Old Korean==
+
+===Etymology 1===
+A semantically adopted phonogram (''hun'gaja''). {{lang|zh|是}} means "this" in Chinese, and the native Korean word for "this" is {{ko-l|이}}.
+
+====Phonogram====
+{{head|oko|phonogram|tr=*-i}}
+
+# {{non-gloss definition|A syllabic [[phonogram]] denoting final vowel *-i}}
+#: {{syn|oko|利}}
+
+===Etymology 2===
+A phonetically adopted phonogram (''eum'gaja''), from {{ltc-l|是}}.
+
+====Phonogram====
+{{head|oko|phonogram|tr=*-si}}
+
+# {{non-gloss definition|A syllabic [[phonogram]] denoting final syllable *-si}}
+#: {{syn|oko|示}}
+
+===Etymology 3===
+
+====Particle====
+{{head|oko|particle|tr=*-i}}
+
+# {{non-gloss definition|Nominative case marker}}
+
+=====Descendants=====
+
+* {{desc|okm|이|tr=-i|pos=nominative case marker}}
+** {{desc|ko|이|tr=-i|pos=nominative case marker}}
+
+----
+
 ==Vietnamese==
 
 ===Han character===
