--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -177,6 +177,7 @@ A phonetically adopted phonogram (''eum'gaja''), from {{ltc-l|是}}.
 #: {{syn|oko|示}}
 
 ===Etymology 3===
+Often connected to the Middle Korean bound noun {{m|okm|이|tr=i|t=person}}.
 
 ====Particle====
 {{head|oko|particle|tr=*-i}}
