--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -66,7 +66,9 @@
 {{ja-readings
 |goon=こん
 |kanon=こん
-|kun=つち-, ひつじさる-}}
+|kun=つち-, ひつじさる-
+|nanori=まもる
+}}
 
 ===Etymology===
 {{compound|ja|未|tr1=hitsuji|申|tr2=saru}}
