--- a/en/愿/愿.15698.wikitext
+++ b/en/愿/愿.15698.wikitext
@@ -56,7 +56,7 @@
 # {{rfdef|ja|sort=心10}}
 
 ====Readings====
-* {{ja-readings|on=[[げん]] (gen)|kun=[[つつしむ]] (tsutsushimu)}}
+* {{ja-readings|on=[[げん]] (gen)|kun=[[つつしむ]] (tsutsushimu)|nanori=すなお, よし}}
 
 ----
 
