--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -6,7 +6,9 @@
 * {{alter|en|cote||obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|cote}}, {{m|fro|cotte||outer garment with sleeves}}, from {{der|en|la|cotta||undercoat, tunic}}, from {{der|en|gem-pro|*kuttô}}, {{m|gem-pro|*kuttǭ||cowl, woolen cloth, coat}}, from {{der|en|ine-pro|*gʷewd-}}, {{m|ine-pro|*gud-||woolen clothes}}. Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||coarse woolen blanket; woolen cape}}), {{cog|gml|kot||coat}}, {{cog|grc|βεῦδος||woman's attire}}.
+From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|cote}}, {{m|fro|cotte||outer garment with sleeves}}, from {{der|en|la|cotta||undercoat, tunic}}, from {{der|en|gem-pro|*kuttô}}, {{m|gem-pro|*kuttǭ||cowl, woolen cloth, coat}}, from {{der|en|ine-pro|*gʷewd-}}, {{m|ine-pro|*gud-||woolen clothes}}. 
+
+Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||coarse woolen blanket; woolen cape}}), {{cog|gml|kot||coat}}, {{cog|grc|βεῦδος||woman's attire}}.
 lock
 
 ===Pronunciation===
