--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -64,7 +64,7 @@ Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, c
 {{wp|lang=pl}}
 
 ===Etymology===
-From {{der|pl|la|mandātum}}.
+From {{bor|pl|de|Mandat}}, from {{der|pl|la|mandātum}}.
 
 ===Pronunciation===
 * {{pl-IPA-auto}}
