--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -267,7 +267,16 @@ From {{inh|ja|ojp|-|sort=つち}}.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref><r
 ==Korean==
 
 ===Etymology===
-From {{der|ko|ltc|sort=지|-}} {{ltc-l|地}}. {{hanja-hunmong|디〮|ti|天文#상01A}}
+From {{der|ko|ltc|sort=지|-}} {{ltc-l|地}}. 
+
+{{collapse|
+* {{hanja-dongguk|띵〮|ttí}}
+* {{hanja-hunmong|디〮|tí|天文#상01A}}
+|Historical readings
+|bg=#FFFFFF}}
+
+===Pronunciation===
+{{ko-hanja-pron|지|t͡ɕi}}
 
 ===Hanja===
 {{ko-hanja-search}}
