--- a/en/偠/偠.11120.wikitext
+++ b/en/偠/偠.11120.wikitext
@@ -4,13 +4,17 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=21244|canj=OMWV|ids=⿰亻要}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0111.050|dkj=00869|dj=0237.050|hdz=10187.030|uh=5060|ud=20576|bh=D450|bd=54352}}
 
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=婹-archaic}}
+
+===Glyph origin===
+{{Han etym}}
+{{Han compound|alt1=亻|人|要|c1=s|c2=p|ls=psc|t1=person}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -33,7 +37,7 @@
 }}
 
 ===Definitions===
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # {{n-g|Only used in compounds.}}
 
