--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -75,6 +75,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * Slovene: {{t|sl|pira|f}}
 * Spanish: {{t|es|espelta|f}}, {{t+|es|escanda|f}}
 * Swedish: {{t+|sv|dinkel}}, {{t+|sv|spelt}}
+* Ukrainian: {{t|uk|спельта|f}}
 * Walloon: {{t+|wa|speate|f}}
 * Welsh: {{t|cy|sbelt|m}}
 {{trans-bottom}}
