/*Chinese*/added alternative form <愉#61048643>

--- a/en/愉/愉.15645.wikitext
+++ b/en/愉/愉.15645.wikitext
@@ -4,13 +4,13 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=98021|canj=POMN|ids=⿰忄俞(GHTJ),⿰忄兪(K)}}
 
-====References====
+===Further reading===
 {{Han ref|kx=0394.040|dkj=10905|dj=0730.150|hdz=42330.010|uh=6109}}
 
 ----
 
 ==Chinese==
-{{zh-forms|alt=𢖳:second-round simplified}}
+{{zh-forms|alt=婾,𢖳-second round simplified}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -28,7 +28,7 @@
 }}
 
 ===Definitions===
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # [[happy]]; [[pleased]]; [[delightful]]
 
