/* English */ dates for different quotes - London Times couldn't be found <find#61052611>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -25,15 +25,15 @@ From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gmw-pro|*f
 #* {{quote-book|en|year=1918|author={{w|W. B. Maxwell}}|chapter=10|title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]|passage=
 It was a joy to snatch some brief respite, and '''find''' himself in the rectory drawing–room. Listening here was as pleasant as talking; just to watch was pleasant.}}
 #* {{quote-journal|en|date=January 25, 2011|author=Paul Fletcher|work=BBC|title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]|passage=
-Van Persie scored a hat-trick against Wigan on Saturday and should have '''found''' the net again after Bendtner '''found''' him at the far post but the Dutchman's header rebounded to safety off the crossbar.}}
+{{w|Robin van Persie|Van Persie}} scored a hat-trick against {{w|en|Wigan Atheltic F. C.|Wigan}} on Saturday and should have '''found''' the net again after Bendtner '''found''' him at the far post but the Dutchman's header rebounded to safety off the crossbar.}}
 #* {{quote-journal|en|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}|title=[http://www.economist.com/news/science-and-technology/21581981-what-pollution-some-opportunity-others-welcome-plastisphere Welcome to the plastisphere]|passage=
 Plastics are energy-rich substances, which is why many of them burn so readily. Any organism that could unlock and use that energy would do well in the Anthropocene. Terrestrial bacteria and fungi which can manage this trick are already familiar to experts in the field. Dr Mincer and Dr Amaral-Zettler '''found''' evidence of them on their marine plastic, too.}}
 # {{lb|en|ditransitive}} To discover by study or experiment direct to an object or end.
-#: ''Water is '''found''' to be a compound substance.''
+#: {{ux|en|Water is '''found''' to be a compound substance.}}
 # {{lb|en|transitive}} To gain, as the object of desire or effort.
-#: ''to '''find''' leisure; to '''find''' means''
+#: {{ux|en|to '''find''' leisure; to '''find''' means}}
 # {{lb|en|transitive}} To attain to; to arrive at; to acquire.
-#: ''Looks like he '''found''' a new vehicle for himself!''
+#: {{ux|en|Looks like he '''found''' a new vehicle for himself!}}
 # {{lb|en|transitive}} To [[point out]].
 #: {{ux|en|He kept '''finding''' faults with my work.}}
 # {{lb|en|ditransitive}} To decide that, to discover that, to form the [[opinion]] that.
@@ -45,16 +45,16 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 |chapter=1|url=http://openlibrary.org/works/OL1521052W
 |passage=“ the awfully hearty sort of Christmas cards that people do send to other people that they don't know at all well. You know. The kind that have mottoes And then, when you see [the senders], you probably '''find''' that they are the most melancholy old folk with malignant diseases. }}
 # {{lb|en|transitive}} To arrive at, as a conclusion; to determine as true; to establish.
-#: ''to '''find''' a verdict; to '''find''' a true bill (of indictment) against an accused person''
+#: {{ux|en|to '''find''' a verdict; to '''find''' a true bill (of indictment) against an accused person}}
 #* {{RQ:Shakespeare Henry 5|I|ii|passage=to '''find''' his title with some shows of truth}}
 # {{lb|en|transitive|archaic}} To supply; to furnish.
-#: ''to '''find''' food for workmen''
+#: {{ux|en|to '''find''' food for workmen}}
 # {{lb|en|transitive|archaic}} To provide for
-#: ''He '''finds''' his nephew in money.''
-#* {{rfdatek|en|London Times}}
-#*: Wages £14 and all '''found'''.
+#: {{ux|en|He '''finds''' his nephew in money.}}
 #* '''1871''', {{w|Charles Kingsley}}, ''At Last: a Christmas in the West Indies''
 #*: Nothing a day and '''find''' yourself.
+#* '''1892''', W. E. Swanton, ''Notes on New Zealand''
+#*:the pay is good, the musterer receiving ten shillings a day, and all '''found''', all the time he is engaged on the "run," even should he be compelled to remain idle on account of rain or mist.
 # {{lb|en|intransitive|legal}} To [[determine]] or [[judge]].
 #: {{ux|en|The jury '''finds''' for the defendant.}}
 # {{lb|en|intransitive|hunting}} To discover game.
