--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -14,10 +14,10 @@
 {{en-proper noun|head=[[united|United]] [[kingdom|Kingdom]]}}
 
 # {{senseid|en|Q145}}A [[kingdom]] and [[sovereign]] [[state]] in [[Western Europe]] comprising the four countries of [[England]], [[Scotland]] and [[Wales]] in the island of [[Great Britain]], and [[Northern Ireland]] in the island of [[Ireland]]. Since 1922.
-# {{senseid|en|Q174193}}{{lb|en|historical}} The [[United Kingdom of Great Britain and Ireland]] (1801–1922)
-# {{senseid|en|Q161885}}{{lb|en|historical|informal|nonstandard}} The [[Kingdom of Great Britain]] (1707–1801)
+# {{senseid|en|Q174193}}{{lb|en|historical}} The [[United Kingdom of Great Britain and Ireland]] (1801–1922).
+# {{senseid|en|Q161885}}{{lb|en|historical|informal|nonstandard}} The [[Kingdom of Great Britain]] (1707–1801).
 # {{lb|en|nation's name}} Kingdom consisting of several constituencies, actual, historical, or hypothetical.
-#: '''''United Kingdom''' of Portugal, Brazil and the Algarves.''
+#: {{ux|en|'''United Kingdom''' of Portugal, Brazil and the Algarves.}}
 
 ====Synonyms====
 * {{sense|Sense 1}} {{l|en|United Kingdom of Great Britain and Northern Ireland}} {{qualifier|official name}}, {{l|en|UK}} or {{l|en|U.K.}} or {{l|en|U. K.}} {{qualifier|abbreviation}}, {{l|en|Great Britain}} {{qualifier|loosely}}, {{l|en|Britain}} {{qualifier|loosely}}, {{l|en|England}} {{qualifier|non-standard; sometimes offensive}}.
@@ -36,7 +36,7 @@
 * Bashkir: {{t|ba|Берләшкән Короллеге|sc=Cyrl}}
 * Basque: {{t+|eu|Erresuma Batua}}
 * Belarusian: {{t|be|Злу́чанае Карале́ўства|n}}, {{t|be|Аб'ядна́нае Карале́ўства|n}}
-* Bengali: {{t+|bn|যুক্তরাজ্য}}
+* Bengali: {{t+|bn|যুক্তরাজ্য|tr=juktôrajjô}}
 * Breton: {{t|br|Rouantelezh Unanet}}
 * Bulgarian: {{t|bg|Обедине́но кра́лство|n}}
 * Burmese: {{t|my|ယူနိုက်တက်ကင်းဒမ်း}}
