--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -6,7 +6,7 @@
 * {{alter|en|UK|U.K.|U. K.||initialism}}
 
 ===Etymology===
-{{compound|en|united|kingdom}}, first attested from 1706.
+From {{com|en|united|kingdom}}, first attested from 1706.
 
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|en|/juːˌnaɪ.tɪd ˈkɪŋ.dəm/|/jʊˌnaɪ.tɪd ˈkɪŋ.dəm/|/jəˌnaɪ.tɪd ˈkɪŋ.dəm/}}
