/* Translations */ Added Plautdietsch translation. <tortoise#61058974>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -113,6 +113,7 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * Pali: {{t|pi|kacchapa|m}}
 * Pashto: {{t+|ps|کيشپ|m|tr=kišáp}} {{qualifier|tortoise or turtle}}
 * Persian: {{qualifier|tortoise or turtle}} {{t+|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}, {{t+|fa|باخه|tr=bâxe|sc=fa-Arab}}
+* Plautdietsch: {{qualifier|tortoise or turtle}} {{t|pdt|Schiltkjrät|f}}
 * Polish: {{qualifier|tortoise or turtle}} {{t+|pl|żółw|m-an}}, {{t+|pl|żółw lądowy|m-an}}
 * Portuguese: {{qualifier|tortoise or turtle}} {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t+|pt|cágado}}
 * Romanian: {{t|ro|țestoasă|f}}, {{t|ro|broască țestoasă|f}}
