--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -174,6 +174,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 
 {{trans-top|to drift gently through the air}}
 * Bulgarian: {{t|bg|нося се|sc=Cyrl}}
+* Dutch: {{t+|nl|zweven}}
 * Finnish: {{t+|fi|leijua}}
 * French: {{t+|fr|flotter}}
 * German: {{t+|de|gleiten}}, {{t+|de|schweben}}
