--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -223,7 +223,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Swedish: {{t+|sv|dra}}, {{t+|sv|draga}}
 * Tajik: {{t+|tg|кашидан}}
 * Telugu: {{t+|te|లాగు}}
-* Thai: {{t+|th|ดึง}}
+* Thai: {{t+|th|ดึง}}, {{t+|th|ลาก}}, {{t+|th|ฉุด}}
 * Tocharian B: {{t|txb|yärtt-}}
 * Turkish: {{t+|tr|çekmek}}
 * Ukrainian: {{qualifier|abstract}} {{t|uk|тяга́ти|impf}}, {{t|uk|потяга́ти|pf}}, {{qualifier|concrete}} {{t|uk|тягти́|impf}}, {{t|uk|потягти́|pf}}, {{t|uk|тягну́ти|impf}}, {{t|uk|потягну́ти|pf}}, {{t|uk|витя́гувати}}, {{t|uk|витяга́ти}}
