--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -184,11 +184,12 @@ From {{der|ko|ltc|-}} {{ltc-l|惡|id=3}}.
 {{collapse|
 * {{hanja-dongguk|ᅙᅡᆨ〮|qák}}
 * {{hanja-hunmong|악〮|ák|雜語}}
+* {{hanja-sinjeung|악|ak|hun=모딜 악}}
 |Historical readings
 |bg=#FFFFFF}}
 
 ====Pronunciation====
-{{ko-hanja-pron|악|a̠k̚}}
+{{ko-hanja-pron|악}}
 
 ====Hanja====
 {{ko-hanja-search}}
@@ -201,7 +202,7 @@ From {{der|ko|ltc|-}} {{ltc-l|惡|id=3}}.
 * {{ko-l|악감|惡感}}
 * {{ko-l|악과|惡果}}
 * {{ko-l|악기|惡氣}}
-* {{ko-l|악설|[[惡說]]/[[惡舌]]}}
+* {{ko-l|악설|惡說/惡舌}}
 * {{ko-l|악녀|惡女}}
 * {{ko-l|악마|惡魔}}
 * {{ko-l|악당|惡黨}}
@@ -229,12 +230,12 @@ From {{der|ko|ltc|-}} {{ltc-l|惡|id=2}}.
 
 {{collapse|
 * {{hanja-dongguk|ᅙᅩᆼ〮|qwó}}
-* {{hanja-sinjeung|오|wo}}
+* {{hanja-sinjeung|오|wo|hun=아쳐 오 去聲}}
 |Historical readings
 |bg=#FFFFFF}}
 
 ====Pronunciation====
-{{ko-hanja-pron|오|o̞}}
+{{ko-hanja-pron|오}}
 
 ====Hanja====
 {{ko-hanja|미워하다|미워할|오}}
