--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -133,12 +133,12 @@ From {{der|ko|ltc|-}} {{ltc-l|偶|id=1|idol; pair}}.
 
 {{collapse|
 * {{hanja-dongguk|ᅌᅮᇢ〯|ngwǔw}}
-* {{hanja-sinjeung|우|wu}}
+* {{hanja-sinjeung|우|wu|hun=ᄧᅡᆨ 우}}
 |Historical readings
 |bg=#FFFFFF}}
 
 ====Pronunciation====
-{{ko-hanja-pron|우|uː|alt=y}}
+{{ko-hanja-pron|우|l=y}}
 
 ====Hanja====
 {{ko-hanja-search}}
@@ -162,11 +162,8 @@ From {{der|ko|ltc|-}} {{ltc-l|偶|id=2|by chance}}.
 |bg=#FFFFFF}}
 
 ====Pronunciation====
-{{sense|by chance}}
-{{ko-hanja-pron|우|uː|alt=y}}
-
-{{sense|in {{ko-l|우연|[[coincidence]]|偶然}}}}
-{{ko-hanja-pron|우|u}}
+* {{sense|by chance}} {{ko-hanja-pron|우|l=y}}
+* {{sense|in {{ko-l|우연|[[coincidence]]|偶然}}}} {{ko-hanja-pron|우}}
 
 ====Hanja====
 {{ko-hanja|마침|우}}
