--- a/en/垚/垚.13086.wikitext
+++ b/en/垚/垚.13086.wikitext
@@ -38,7 +38,7 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# High (referred to masses of earth, ex. mountains, hills... It was a synonym of 堯 > 尧)
+# {{zh-obsolete}} {{lb|zh|of masses of earth}} [[tall]]
 
 ===Etymology 2===
 {{zh-see|堯}}
