--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -128,6 +128,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Smithy Bridge
 |Sowerby Bridge
 |Spean Bridge
+|Stamford Bridge
 |Stourbridge
 |suspension bridge
 |Sutton Bridge
