--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -152,7 +152,7 @@ From {{der|ko|ltc|-}} {{ltc-l|偶|id=1|idol; pair}}.
 * {{ko-l|우상|偶像}}
 * {{ko-l|대우|對偶}}
 * {{ko-l|우수|偶數}}
-* {{ko-l|우대|優待}}
+* {{ko-l|우대|偶對}}
 * {{ko-l|토우|土偶}}
 * {{ko-l|택우|擇偶}}
 * {{ko-l|목우|木偶}}
@@ -173,19 +173,19 @@ From {{der|ko|ltc|-}} {{ltc-l|偶|id=2|by chance}}.
 
 ====Pronunciation====
 * {{sense|in {{ko-l|우연|[[coincidence]]|偶然}}}} {{ko-hanja-pron|우}}
-* {{sense|by chance}} {{ko-hanja-pron|우|l=y}}
+* {{sense|by chance; accidentally; etc.}} {{ko-hanja-pron|우|l=y}}
 
 ====Hanja====
 {{ko-hanja|마침|우}}
 
-# {{hanja form of|우|[[accidentally]]; [[coincidentally]]; [[by chance]]}}
+# {{hanja form of|우|[[by chance]]; [[accidentally]]; [[coincidentally]]}}
 
 ====Compounds====
 {{der-top3|Compounds}}
 * {{ko-l|우연|偶然}}
 * {{ko-l|우발|偶發}}
 * {{ko-l|우이|偶爾}}
-* {{ko-l|우성|優性}}
+* {{ko-l|우성|偶性}}
 * {{ko-l|우감|偶感}}
 * {{ko-l|우합|偶合}}
 {{der-bottom}}
