--- a/en/偛/偛.11115.wikitext
+++ b/en/偛/偛.11115.wikitext
@@ -49,7 +49,7 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[そう]] (sō), [[さふ]] (safu)|kun=[[わるがしこい]] (warugashikoi)}}
+* {{ja-readings|on=そう,さふ|kun=わるがしこい}}
 
 ----
 
