--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -13,7 +13,7 @@
 {{head|en|verb form}}
 
 # {{en-simple past of|choose}}
-# {{lb|en|now|colloquial|nonstandard|archaic}} {{past participle of|en|choose|nocat=1}}
+# {{lb|en|now|colloquial|nonstandard}} {{past participle of|en|choose|nocat=1}}
 #* {{Template:RQ:Milton Paradise Regained|book=1|page=10|lines=165-166|passage=From what conſummate vertue I have '''choſe''' / This perfect Man, by merit call'd my Son,}}
 #* {{quote-book|en|year=1896|publisher={{w|Houghton Mifflin}}|author={{w|Sarah Orne Jewett}}|title=The Country of the Pointed Firs|url=https://books.google.co.nz/books?id=kGZJSWbSXsMC|page=66|passage=I expect you might have '''chose''' a somewhat larger fish, but I'll try an' make it do.}}
 #* {{quote-book|en|year=2010|publisher={{w|Standford University Press}}|author=Andrew Noble Koss|title=World War I and the Remaking of Jewish Vilna|url=https://books.google.co.nz/books?id=TIMoQbjAmhgC&pg|page=x|passage=Since this work is about Vilna's Jewish community, I have '''chose''' the familiar spelling Vilna, which closely approximates Jews' preferred name for their city.}}
