--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -130,11 +130,8 @@ From {{der|ko|ltc|-}} {{ltc-l|映|id=2}}.
 |bg=#FFFFFF}}
 
 ===Pronunciation===
-{{sense|to project}}
-{{ko-hanja-pron|영|jʌ̹ŋ}}
-
-{{sense|to shine; etc.}}
-{{ko-hanja-pron|영|jɘːŋ|alt=ː}}
+* {{sense|to project}} {{ko-hanja-pron|영}}
+* {{sense|to shine; etc.}} {{ko-hanja-pron|영|l=y}}
 
 ===Hanja===
 {{ko-hanja-search}}
