--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -78,7 +78,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 {{trans-bottom}}
 
 {{trans-top|religious painting}}
-* Albanian: {{t|sq|ikona|f}}
+* Albanian: {{t|sq|ikona|f}}, {{t+|sq|ikonë|f}}
 * Arabic: {{t|ar|أَيْقُونَة|f}}, {{t|ar|إِيقُونَة|f}}
 * Armenian: {{t+|hy|սրբապատկեր}}, {{t+|hy|պատկեր}}
 * Asturian: {{t|ast|iconu|m}}
@@ -107,9 +107,9 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Indonesian: {{t+|id|arca}}, {{t+|id|ikon}}
 * Irish: {{t|ga|íocón|m}}
 * Italian: {{t+|it|icona|f}}
-{{trans-mid}}
 * Japanese: {{t|ja|聖像|tr=せいぞう, seizō}}
 * Kazakh: {{t|kk|икон}}, {{t|kk|икона}}
+{{trans-mid}}
 * Korean: {{t|ko|이콘}}, {{t|ko|성상}}, {{t|ko|성화}}
 * Kyrgyz: {{t|ky|икона}}
 * Latin: {{t+|la|icon|f}}
@@ -120,7 +120,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 *: Bokmål: {{t+|nb|ikon|m|n}}
 *: Nynorsk: {{t|nn|ikon|m|n}}
 * Ossetian: {{t|os|иконӕ}}
-* Persian: {{t+|fa|تمثال|tr=temsâl}}
+* Persian: {{t+|fa|تمثال|tr=temsâl}}, {{t+|fa|شمایل|tr=šemâyel}}, {{t|fa|شمائل|tr=šemâ'el}}
 * Polish: {{t+|pl|ikona|f}}
 * Portuguese: {{t+|pt|ícone|m}}, {{t+|pt|ídolo|m}}
 * Romanian: {{t+|ro|icoană|f}}
@@ -132,8 +132,10 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Slovene: {{t+|sl|ikona|f}}
 * Spanish: {{t+|es|icono|m}}, {{t+|es|ícono|m}}
 * Swedish: {{t+|sv|ikon|c}}
+* Tajik: {{t+|tg|икона}}
 * Thai: {{t|th|รูปเคารพ}}
 * Turkish: {{t+|tr|ikon}}
+* Turkmen: {{t|tk|ikona}}
 * Ukrainian: {{t+|uk|іко́на|f|sc=Cyrl}}
 * Uzbek: {{t+|uz|ikona}}
 * Yup'ik: {{t|esu|ikuunaq}}
