--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -42,7 +42,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 {{trans-top|image}}
 * Arabic: {{t|ar|قُونَة|f}}
 * Armenian: {{t+|hy|պատկեր}}
-* Bulgarian: {{t+|bg|изображение|n}}
+* Bulgarian: {{t+|bg|изображе́ние|n}}
 * Catalan: {{t+|ca|icona|f}}
 * Cornish: {{t|kw|ikon|m}}
 * Danish: {{t|da|ikon|c}}
@@ -64,7 +64,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 *: Nynorsk: {{t|nn|ikon|m|n}}
 * Polish: {{t+|pl|ikona|f}}
 * Portuguese: {{t+|pt|ícone|m}}
-* Russian: {{t+|ru|ико́на|f}}
+* Russian: {{t+|ru|изображе́ние|n}}
 * Scottish Gaelic: {{t|gd|ìomhaigh|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|икона|f|sc=Cyrl}}
@@ -102,7 +102,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Georgian: {{t+|ka|ხატი}}
 * German: {{t+|de|Ikone|f}}
 * Greek: {{t+|el|εικόνα|f}}, {{t+|el|εικόνισμα|n}}
-* Hebrew: {{t+|he|איקונין|m|tr=ikonín}}
+* Hebrew: {{t+|he|אִיקוֹנִין|m|tr=ikonín}}
 * Hungarian: {{t+|hu|ikon}}
 * Indonesian: {{t+|id|arca}}, {{t+|id|ikon}}
 * Irish: {{t|ga|íocón|m}}
@@ -115,7 +115,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Latin: {{t+|la|icon|f}}
 * Latvian: {{t|lv|ikona|f}}
 * Lithuanian: {{t+|lt|ikona|f}}
-* Macedonian: {{t|mk|икона|f|sc=Cyrl}}
+* Macedonian: {{t|mk|икона|f}}
 * Norwegian:
 *: Bokmål: {{t+|nb|ikon|m|n}}
 *: Nynorsk: {{t|nn|ikon|m|n}}
@@ -126,8 +126,8 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Romanian: {{t+|ro|icoană|f}}
 * Russian: {{t+|ru|ико́на|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|икона|f|sc=Cyrl}}
-*: Roman: {{t+|sh|ikona|f}}
+*: Cyrillic: {{t|sh|ѝкона|f}}
+*: Roman: {{t+|sh|ìkona|f}}
 * Slovak: {{t+|sk|ikona|f}}
 * Slovene: {{t+|sl|ikona|f}}
 * Spanish: {{t+|es|icono|m}}, {{t+|es|ícono|m}}
