t+oc:[[ros]] ([[WT:EDIT|Assisted]]) <blond#61134053>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -106,6 +106,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Manx: {{t|gv|fynn}}, {{t|gv|bane}}
 * Mongolian: {{t|mn|[[шар]] [[үс|үстэй]]}}
 * Norwegian: {{t|no|blond}}
+* Occitan: {{t+|oc|ros}}
 * Persian: {{t+|fa|بور|tr=bur}}
 * Polish: {{t+|pl|blond}}
 * Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
