--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -40,11 +40,16 @@ The right-middle part could be found as [[亾]] instead of [[亡]].
 
 # to [[flee]]
 # to [[fear]]; to [[dread]]; to be [[afraid]]
+# to [[feel]] [[nervous]]; to [[get]] [[flustered]]; to [[get]] [[flurried]]
 # [[flustered]]; [[nervous]]; [[panicky]]; [[frantic]]
 # {{lb|zh|colloquial}} {{n-g|Used as an [[adjectival]] [[complement]] after {{zh-l|得|tr=de}}, to [[emphasise]] the [[unbearability]] or [[extent]] of the [[adjectival]] [[state]].}}
 
 =====Synonyms=====
+* {{s|to fear}}
 {{zh-dial|害怕}}
+* {{s|to feel nervous}} {{zh-l|發慌}}
+* {{s|flustered}}
+{{zh-syn-saurus|慌張}}
 
 ====Compounds====
 {{zh-der|fold=1|慌成一團|急慌|慌了手腳|恐慌|慌忙無措|心慌|慌速|慌腿|慌手慌腳|慌慌忙忙|慌慌張張|慌悚|慌忙|慌張|慌了神兒|慌亂|慌不擇路|愴慌|意亂心慌|慌急|悶得慌|恐慌症|心慌膽戰|心慌意亂|慌手忙腳|亂得慌|害慌|慌張勢煞|慌裡慌張|慌神|不慌不忙|口隔心慌|慌張慌智|堵得慌|慌腳雞|磣的慌|戃慌|手慌腳忙|發慌|撐的慌|經濟恐慌|驚慌失色|鬼慌|驚慌失措|驚慌|貪慌|腸慌腹熱|累得慌|膩的慌|著慌/着慌|鬧的慌}}
@@ -64,7 +69,7 @@ The right-middle part could be found as [[亾]] instead of [[亡]].
 # {{†}} [[dim]]; [[indistinct]]
 # {{†}} to [[sleep talk]]
 
-{{zh-cat|Elementary}}
+{{zh-cat|Elementary|Emotions}}
 
 ----
 
