t+cmn:[[曲線]] t+cmn:[[曲线]] t+yue:[[曲線]] t+yue:[[曲线]] t-balance ([[WT:EDIT|Assisted]]) <curve#61148801>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -101,6 +101,9 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Armenian: {{t-needed|hy}}
 * Bulgarian: {{t|bg|крива линия|f}}
 * Catalan: {{t+|ca|corba|f}}
+* Chinese:
+*: Cantonese: {{t|yue|曲線}}, {{t|yue|曲线|tr=kuk1 sin3}}
+*: Mandarin: {{t+|cmn|曲線}}, {{t+|cmn|曲线|tr=qǔxiàn}}
 * Esperanto: {{t-needed|eo}}
 * Estonian: {{t-needed|et}}
 * Finnish: {{t+|fi|käyrä}}
@@ -112,8 +115,8 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Italian: {{t+|it|curva|f}}
 * Japanese: {{t-needed|ja}}
 * Khmer: {{t-needed|km}}
-* Korean: {{t-needed|ko}}
 {{trans-mid}}
+* Korean: {{t-needed|ko}}
 * Maori: {{t|mi|ānau}}
 * Mongolian: {{t-needed|mn}}
 * Navajo: {{t|nv|ahééʼídzoh}}
