--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -183,6 +183,8 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Afrikaans: {{t|af|kurwe}}
 * Bulgarian: {{t+|bg|извивки|p}}
 * Catalan: {{t+|ca|corbes|f-p}}
+* Chinese:
+*: Cantonese: {{t|yue|曲線}}, {{t|yue|曲线|tr=kuk1 sin3}}
 * Danish: {{t|da|kurver|p}}
 * Dutch: {{t+|nl|rondingen|m-p}}, {{t+|nl|figuur|f}}
 * Finnish: {{t+|fi|kurvi}}, {{t|fi|kurvit|p}}
@@ -190,8 +192,8 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Greek: {{t+|el|καμπύλη|f}}, {{t|el|καμπύλες|f-p}}
 * Hebrew: {{t|he|חיטובים|m-p|tr=khit'uvym}}
 * Hindi: {{t+|hi|घुमाव|m}}
-* Italian: {{qualifier|usually plural}} {{t+|it|curva|f}}
 {{trans-mid}}
+* Italian: {{qualifier|usually plural}} {{t+|it|curva|f}}
 * Macedonian: {{t|mk|о́блина|f}}, {{t|mk|о́блини|f-p}}
 * Portuguese: {{t+|pt|curvas|f-p}}
 * Russian: {{t+|ru|изги́б|m}} (usually plural: {{t|ru|изги́бы|m-p}})
