t+cdo:[[俊]] t-balance t+wuu:[[漂亮]] t+wuu:[[好看]] t+dng:[[җүн]] t+dng:[[җүн-ён]] t+dng:[[җиҗүн]] t+dng:[[җүнмый]] t+cdo:[[漂亮]] ([[WT:EDIT|Assisted]]) <beautiful#61155259>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -88,9 +88,12 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Chamicuro: {{t|ccc|pya'c̈homa}}, {{t|ccc|pewa puti'na}}
 * Chinese:
 *: Cantonese: {{t|yue|靚|sc=Hani}}, {{t|yue|靓|tr=leng3|sc=Hani}}, {{t|yue|好睇|tr=hou2 tai2|sc=Hani}} {{qualifier|object}}, {{t|yue|漂亮|tr=piu3 loeng6|sc=Hani}} {{qualifier|formal}}, {{t|yue|美麗|sc=Hani}}, {{t|yue|美丽|tr=mei5 lai6|sc=Hani}} {{qualifier|formal}}
+*: Dungan: {{t|dng|җүн}}, {{t|dng|җүн-ён}}, {{t|dng|җиҗүн}}, {{t|dng|җүнмый}}
 *: Mandarin: {{t+|cmn|漂亮|tr=piàoliang|sc=Hani}}, {{t+|cmn|美|tr=měi|sc=Hani}}, {{t+|cmn|好看|tr=hǎokàn|sc=Hani}}, {{t+|cmn|美麗|sc=Hani}}, {{t+|cmn|美丽|tr=měilì|sc=Hani}}
+*: Min Dong: {{t|cdo|俊|tr=cóng}}, {{t|cdo|漂亮|tr=piĕu-liông}}
 *: Min Nan: {{t+|nan|媠|tr=súi|sc=Hani}}, {{t+|nan|美麗|sc=Hani}}, {{t|nan|美丽|tr=bí-lē|sc=Hani}}, {{t|nan|好看|tr=hó-khòaⁿ|sc=Hani}}, {{t+|nan|媠噹噹|sc=Hani}}, {{t|nan|媠当当|tr=súi-tang-tang|sc=Hani}}
 *: Teochew: {{t|zhx-teo|雅|tr=ngia2}}
+*: Wu: {{t|wuu|漂亮|tr=phiau lian}}, {{t|wuu|好看|tr=hau khoe}}
 * Coptic: {{t|cop|ⲛⲉⲥⲉ}}
 * Cornish: {{t|kw|teg}}
 * Czech: {{t+|cs|krásný}}, {{t+|cs|pěkný}}
@@ -135,8 +138,8 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kunigami: {{t|xug|清ーらせん|tr=すーらせん, sūrasen}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|جوان}}, {{t+|ckb|ئێسک سووک}}
-* Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
 * Laboya: {{t|lmy|jorro}}
 * Lao: {{t|lo|ງາມ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
