t+hi:[[राद]] t+hi:[[गर्जन]] ([[WT:EDIT|Assisted]]) <thunder#61155282>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -125,7 +125,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Haitian Creole: {{t|ht|loray}}
 * Hausa: {{t|ha|tarnatsa}}
 * Hebrew: {{t+|he|רַעַם|m|tr=ra'am}}
-* Hindi: {{t+|hi|गरज|f}}, {{t+|hi|गड़गड़ाहट|f}}
+* Hindi: {{t+|hi|गरज|f}}, {{t+|hi|गड़गड़ाहट|f}}, {{t+|hi|राद}}, {{t+|hi|गर्जन|m}}
 * Hungarian: {{t+|hu|mennydörgés}}, {{t+|hu|égzengés}}
 * Icelandic: {{t+|is|þruma|f}}
 * Ido: {{t+|io|tondro}}
