t+lo:[[ງ້ອມ]] t+lo:[[ຈຸບຸ]] t+lo:[[ຊະແລບ]] t+kmr:[[xweşik]] t+kmr:[[spehî]] t+gu:[[સુંદર]] t+or:[[ସୁନ୍ଦର]] t+ce:[[хаза]] t+kn:[[ಸುಂದರ]] t-balance t+ml:[[സുന്ദരം]] t+mr:[[सुंदर]] ([[WT:EDIT|Assisted]]) <beautiful#61155584>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -86,6 +86,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Catalan: {{t+|ca|bell|m}}, {{t+|ca|bella|f}}, {{t+|ca|formós|m}}, {{t|ca|formósa|f}}, {{t+|ca|bonic|m}}, {{t+|ca|bonica|f}}
 * Central Dusun: {{t|dtp|olumis}}
 * Chamicuro: {{t|ccc|pya'c̈homa}}, {{t|ccc|pewa puti'na}}
+* Chechen: {{t|ce|хаза}}
 * Chinese:
 *: Cantonese: {{t|yue|靚|sc=Hani}}, {{t|yue|靓|tr=leng3|sc=Hani}}, {{t|yue|好睇|tr=hou2 tai2|sc=Hani}} {{qualifier|object}}, {{t|yue|漂亮|tr=piu3 loeng6|sc=Hani}} {{qualifier|formal}}, {{t|yue|美麗|sc=Hani}}, {{t|yue|美丽|tr=mei5 lai6|sc=Hani}} {{qualifier|formal}}
 *: Dungan: {{t|dng|җүн}}, {{t|dng|җүн-ён}}, {{t|dng|җиҗүн}}, {{t|dng|җүнмый}}
@@ -113,6 +114,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Gothic: {{t|got|𐍃𐌺𐌰𐌿𐌽𐍃}}
 * Greek: {{t+|el|ωραίος}}, {{t+|el|όμορφος}}
 *: Ancient: {{t|grc|καλός}}, {{t|grc|ὡραῖος}}
+* Gujarati: {{t|gu|સુંદર}}
 * Hawaiian: {{t-needed|haw}}
 * Hebrew: {{t+|he|יָפֶה|m|tr=yafé}}, {{t+|he|יָפָה|f|tr=yafá}}
 * Hindi: {{t|hi|ख़ूबसूरत}}, {{t+|hi|सुन्दर}}
@@ -131,6 +133,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}}, {{t+|ja|綺麗|tr=きれい, kirei}}, {{t+|ja|素敵|tr=すてき, suteki}}
 * Jingpho: {{t|kac|tsawm}}
 * Kalmyk: {{t-needed|xal}}
+* Kannada: {{t+|kn|ಸುಂದರ}}
 * Kazakh: {{t+|kk|әдемі|sc=Cyrl}}, {{t|kk|әсем|sc=Cyrl}}
 * Khanty: {{t|kca|хурамӑӈ}} {{qualifier|Kazym}}
 * Khmer: {{t+|km|ស្អាត}}, {{t+|km|ល្អ}}
@@ -138,10 +141,11 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kunigami: {{t|xug|清ーらせん|tr=すーらせん, sūrasen}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|جوان}}, {{t+|ckb|ئێسک سووک}}
+*: Northern Kurdish: {{t+|kmr|xweşik}}, {{t+|kmr|spehî}}
 {{trans-mid}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
 * Laboya: {{t|lmy|jorro}}
-* Lao: {{t|lo|ງາມ}}
+* Lao: {{t|lo|ງາມ}}, {{t|lo|ງ້ອມ}}, {{t|lo|ຈຸບຸ}}, {{t|lo|ຊະແລບ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
 * Latvian: {{t|lv|skaists}}, {{t|lv|daiļš}}, {{t|lv|glīts}}
 * Limburgish: {{t|li|sjoen}}
@@ -150,8 +154,10 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Lü: {{t|khb|ᦇᦱᧄ|sc=Talu}}
 * Macedonian: {{t|mk|убав}}, {{t|mk|прекрасен}}
 * Malay: {{t|ms|cantik}}, {{t|ms|indah}}, {{t|ms|molek}}
+* Malayalam: {{t+|ml|സുന്ദരം}}
 * Manx: {{t|gv|aalin}}, {{t|gv|bwaagh}}, {{t|gv|bwoyagh}}
 * Maori: {{t|mi|waiwaiā }}, {{t|mi|pīwari }}, {{t|mi|hūmārie }}, {{t|mi|hūmārire }}, {{t|mi|purotu }}, {{t|mi|rerehua }}, {{t+|mi|tau }}, {{t|mi|ātanga }}, {{t|mi|ātaahua }}
+* Marathi: {{t|mr|सुंदर}}
 * Mazanderani: {{t|mzn|قشنگ}}, {{t|mzn|خجیر}}
 * Middle English: {{t|enm|beautevous}}, {{t|enm|wynsom}}
 * Mongolian: {{t+|mn|сайхан|sc=Cyrl}}, {{t+|mn|гуа}}
@@ -168,7 +174,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Old English: {{t|ang|fæġer}}
 * Old Norse: {{t|non|fagr}}
 * Old Occitan: {{t|pro|bel}}
-* Oriya: {{t-needed|or}}
+* Oriya: {{t|or|ସୁନ୍ଦର}}
 * Pashto: {{t+|ps|ښکلی|tr=ẍkwëlay}}
 * Persian: {{t+|fa|زیبا|tr=zibâ}}, {{t+|fa|قشنگ|tr=qašang}}
 * Plautdietsch: {{t|pdt|schmock}}, {{t|pdt|scheen}}
