--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -28,6 +28,12 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 #: '''''butter''' of antimony; '''butter''' of arsenic''
 # {{lb|en|aviation|slang}} A smooth plane landing.
 
+==== '''Adjective''' ====
+
+# Very smooth
+
+''That movie’s animation was total butter!''
+
 =====Derived terms=====
 {{der3|en|title=Terms derived from ''butter'' (noun)
 |almond-butter
