--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -142,8 +142,8 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|جوان}}, {{t+|ckb|ئێسک سووک}}
 *: Northern Kurdish: {{t+|kmr|xweşik}}, {{t+|kmr|spehî}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
+{{trans-mid}}
 * Laboya: {{t|lmy|jorro}}
 * Lao: {{t|lo|ງາມ}}, {{t|lo|ງ້ອມ}}, {{t|lo|ຈຸບຸ}}, {{t|lo|ຊະແລບ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
@@ -171,7 +171,8 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|ⰾⱑⱂⱏ}}
 *: Glagolitic: {{t|cu|лѣпъ}}, {{t|cu|красьнъ}}
-* Old English: {{t|ang|fæġer}}
+* Old East Slavic: {{t|orv|лѣпъ}}, {{t|orv|красьнъ}}
+* Old English: {{t|ang|fæġer}}, {{t|ang|sċīene}}
 * Old Norse: {{t|non|fagr}}
 * Old Occitan: {{t|pro|bel}}
 * Oriya: {{t|or|ସୁନ୍ଦର}}
