--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -75,7 +75,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Bashkir: {{t|ba|матур}}
 * Basque: {{t-needed|eu}}
 * Belait: {{t|beg|jie batien}}
-* Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}, {{t|be|харо́шы}}, {{t|be|красі́вы}}, {{t|be|урадлі́вы}}
+* Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}, {{t|be|харо́шы}}, {{t|be|красі́вы}}, {{t|be|урадлі́вы}}, {{t|be|фа́йны}}
 * Bengali: {{t|bn|সুন্দর|sc=Beng}}
 * Bikol Central: {{t|bcl|magayon}}
 * Breton: {{t+|br|brav}}, {{t+|br|kaer}}
@@ -179,7 +179,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Pashto: {{t+|ps|ښکلی|tr=ẍkwëlay}}
 * Persian: {{t+|fa|زیبا|tr=zibâ}}, {{t+|fa|قشنگ|tr=qašang}}
 * Plautdietsch: {{t|pdt|schmock}}, {{t|pdt|scheen}}
-* Polish: {{t+|pl|piękny}}
+* Polish: {{t+|pl|piękny}}, {{t+|pl|fajny}}
 * Portuguese: {{t+|pt|belo|m}}, {{t+|pt|bela|f}}, {{t+|pt|bonito|m}}, {{t+|pt|bonita|f}}, {{t+|pt|lindo|m}}, {{t+|pt|linda|f}}
 * Punjabi: {{t+|pa|ਸੁਹਣਾ}}
 * Quechua: {{t+|qu|sumaq}}, {{t|qu|şumag}}, {{t|qu|k'acha}}
@@ -218,7 +218,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Turkish: {{t+|tr|güzel}}
 * Turkmen: {{t|tk|görmegeý}}, {{t|tk|gözel}}, {{t|tk|gelşikli}}
 * Tutong: {{t|ttg|lawa'}}
-* Ukrainian: {{t|uk|вродли́вий}}, {{t+|uk|краси́вий}}, {{t+|uk|га́рний|sc=Cyrl}}
+* Ukrainian: {{t|uk|вродли́вий}}, {{t+|uk|краси́вий}}, {{t+|uk|га́рний|sc=Cyrl}}, {{t|uk|хоро́ший}}, {{t|uk|фа́йний}}
 * Urdu: {{t|ur|خوبصورت|tr=xūbsūrat}}, {{t|ur|سندر|tr=sundar}}
 * Uyghur: {{t|ug|گۈزەل}}
 * Uzbek: {{t+|uz|yoqimli}}, {{t+|uz|goʻzal}}
