--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -22,7 +22,7 @@
 
 ===Etymology 1===
 {{zh-forms|s=恶|alt=僫,悪,𢛫,𢝏,䜑}}
-From {{inh|zh|sit-pro|*ʔak|bad}}; cognate with {{cog|bo|tr='ag po|t=bad}} ({{zh-ref|Coblin, 1986}}).
+From {{inh|zh|sit-pro|*ʔak||bad}}; cognate with {{cog|bo|tr='ag po|t=bad}} ({{zh-ref|Coblin, 1986}}).
 
 ====Pronunciation====
 {{zh-pron
