t+pl:[[poczuć]] t+pl:[[odczuć]] ([[WT:EDIT|Assisted]]) <feel#61160261>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -125,7 +125,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Norwegian: {{t+|no|føle}}, {{t+|no|kjenne}}
 * Occitan:
 * Old Church Slavonic: {{t|cu|чоути|sc=Cyrs}}
-* Polish: {{t+|pl|czuć}}
+* Polish: {{t+|pl|czuć}}, {{t+|pl|poczuć}}, {{t+|pl|odczuć}}
 * Portuguese: {{t+|pt|apalpar}}, {{t+|pt|tocar}}, {{t+|pt|sentir}}
 * Quechua: {{t|qu|kullay}}
 * Romanian: {{t+|ro|simți}}
