--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -17,16 +17,16 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 {{en-noun|~}}
 
 # The loud rumbling, cracking, or crashing [[sound]] caused by expansion of rapidly heated air around a [[lightning]] bolt.
-#: '''''Thunder''' is preceded by lightning.''
+#: {{ux|en|'''Thunder''' is preceded by lightning.}}
 # A deep, [[rumble|rumbling]] noise resembling thunder.
-#: ''Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a stampede.''
+#: {{ux|en|Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a stampede.}}
 # An alarming or startling [[threat]] or [[denunciation]].
 #* {{RQ:Prescott Peru}}
 #*: The '''thunders''' of the Vatican could no longer strike into the heart of princes.
 # {{lb|en|obsolete}} The [[discharge]] of [[electricity]]; a [[thunderbolt]].
-#* {{RQ:Shakespeare Lear|II|i|passage=The revenging gods / 'Gainst parricides did all their '''thunders''' bend.}}
+#* {{RQ:Shakespeare Lear|II|i|passage=The revenging gods <br> 'Gainst parricides did all their '''thunders''' bend.}}
 # {{lb|en|figuratively}} The [[spotlight]].
-#: Shortly after I announced my pregnancy, he stole my '''''thunder''''' with his news of landing his dream job.
+#: {{ux|en|Shortly after I announced my pregnancy, he stole my '''thunder''' with his news of landing his dream job.}}
 
 ====Usage notes====
 * [[roll]], [[clap]], [[peal]] are some of the words used to count thunder e.g. ''A series of rolls/claps/peals of thunder were heard''
@@ -78,7 +78,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Albanian: {{t+|sq|bubullimë|f}}, {{t|sq|mumrimë|f}}
 * Arabic: {{t+|ar|رَعْد|m}}
 *: Egyptian Arabic: {{t|arz|رعد|m|tr=raʿd}}
-*: Moroccan Arabic: {{t|ary|رعد|m|tr=raʕd}}
+*: Moroccan Arabic: {{t|ary|رعد|m|tr=raʿd}}
 * Aramaic:
 *: Classical Syriac: {{t|syc|ܪܥܡܐ|m|tr=raʿmā}}
 * Armenian: {{t+|hy|որոտ}}
