--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology 1===
 {{root|en|ine-pro|*gʷem-}}
-From {{inh|en|enm|comen}}, {{m|enm|cumen}}, from {{inh|en|ang|coman}}, {{m|ang|cuman||to come, go, happen}}, from {{inh|en|gem-pro|*kwemaną||to come}}, from {{inh|en|ine-pro|*gʷem-||to step}}.
+From {{inh|en|enm|comen}}, {{m|enm|cumen}}, from {{inh|en|ang|cuman}}, from {{inh|en|gem-pro|*kwemaną||to come}}, from {{inh|en|ine-pro|*gʷem-||to step}}.
 {{rfe|en|Where does the masturbation sense come from?}}
 
 {{rel-top|cognates}}
