/* Translations */added second Italian translation <come#61178024>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -427,7 +427,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Hungarian: {{tt|hu|elélvez}}, {{tt+|hu|elmegy}}
 * Icelandic: {{tt|is|fá það}}
 {{trans-mid}}
-* Italian: {{tt+|it|venire}}
+* Italian: {{tt+|it|venire}}, {{tt+|it|venirsene}}
 * Japanese: {{tt+|ja|いく|tr=iku}}, {{tt|ja|イく|tr=iku|sc=Jpan}}
 * Korean: {{tt+|ko|가다}} {{qualifier|slang}}
 * Macedonian: {{tt|mk|свршува}}
