t+fr:[[fond]] ([[WT:EDIT|Assisted]]) <substance#61183911>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -146,7 +146,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 * Czech: {{t+|cs|podstata}}
 * Danish: {{t|da|substans}}, {{t|da|hovedindhold}}
 * Finnish: {{t+|fi|ydin}}, {{t+|fi|substanssi}}, {{t+|fi|olemus}}
-* French: {{t+|fr|substance|f}}
+* French: {{t+|fr|substance|f}}, {{t+|fr|fond|m}}
 * Galician: {{t+|gl|substancia|f}}
 * Georgian: {{t|ka|არსი}}
 * German: {{t+|de|Substanz|f}}
