/* Derived terms */ <bridge#61186057>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -143,6 +143,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Whaley Bridge
 |Wheatstone bridge
 |Wien bridge
+|Wootton Bridge
 }}
 
 =====Translations=====
