/* Chinese */ 角 does not mean "cursive form" lol... but to be serious, this is not an alt form of 角; printed form in 兒女英雄傳 isn't really an etymology - this should also be in 旮旯, not here <旮#61186256>

--- a/en/旮/旮.16918.wikitext
+++ b/en/旮/旮.16918.wikitext
@@ -11,35 +11,29 @@
 ----
 
 ==Chinese==
-{{zh-forms|alt=卡-Cantonese}}
 
 ===Etymology 1===
-The printed form was found in {{w|Ernü Yingxiong Zhuan|兒女英雄傳}}.
+{{zh-forms}}
 
 ====Pronunciation====
 {{zh-pron
 |m=gā
 |m_note=gā: vernacular
-|c=go1, ka1
-|c_note=ka1: vernacular
+|c=go1,ka1
+|c_note=ka1 - vernacular, only in {{zh-l|山旮旯}}
 |cat=
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{zh-alt form|角|cursive form}}
-## {{zh-only|旮旯}}
+# {{zh-only|旮旯}}
 
 ====Compounds====
 {{zh-der|旮旯}}
 
 ===Etymology 2===
 {{zh-see|旭|v}}
-
-===References===
-* [http://jonathanovsky.wordpress.com/2015/02/10/「山卡啦」點寫？/ 「山卡啦」點寫？]
-* [http://web.archive.org/web/20180315215817/http://dlib.zslib.com.cn/qklw/rdzl/B201-250/RD082306 “旮旯”议]
 
 ----
 
