t+mn:[[тулаан]] t+mn:[[тэмцэл]] t-balance t+mn:[[дайн]] t+mn:[[ᠲᠡᠮᠡᠴᠡᠯ]] t+mn:[[ᠳᠠᠶᠢᠨ]] t+mn:[[ᠲᠤᠯᠤᠭᠠᠨ]] t+sq:[[betejë]] t+tg:[[корзор]] t+fa:[[کارزار]] ([[WT:EDIT|Assisted]]) <fight#61187066>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -407,18 +407,18 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Korean: {{t+|ko|싸움}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|شەڕ}}
-{{trans-mid}}
 * Latin: {{t+|la|pugna}}
+{{trans-mid}}
 * Latvian: {{t|lv|cīņa|f}}, {{t|lv|kauja|f}}
 * Lithuanian: {{t+|lt|kova|f}}, {{t|lt|muštynės|p}}, {{t|lt|grumtynės|p}}
 * Macedonian: {{t|mk|бој|m|sc=Cyrl}}
-* Mongolian: {{t-needed|mn}}
+* Mongolian: {{t+|mn|тулаан}}
 * Nepali: {{t|ne|झगडा}}, {{t|ne|लडाईं}}
 * Norman: {{t|nrf|bastaude|f}}, {{t|nrf|frip'sie|f}}
 * Norwegian: {{t+|no|slåsskamp}}
 * Occitan: {{t+|oc|lucha|f}}
 * Old English: {{t|ang|ġefeoht|n}}
-* Persian: {{t+|fa|دعوا|tr=da'vâ}}
+* Persian: {{t+|fa|دعوا|tr=da'vâ}}, {{t+|fa|کارزار|tr=kârzâr}}
 * Pijin: {{t|pis|faet}}
 * Polish: {{t+|pl|bójka|f}}, {{t+|pl|bój|m}}
 * Portuguese: {{t+|pt|luta|f}}, {{t+|pt|briga|f}}
@@ -430,6 +430,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Slovak: {{t|sk|boj}}
 * Spanish: {{t+|es|lucha|f}}
 * Swahili: {{t+|sw|vita}}
+* Tajik: {{t|tg|корзор}}
 * Thai: {{t+|th|การต่อสู้}}
 * Tibetan: {{t-needed|bo}}
 * Tok Pisin: {{t|tpi|pait}}
@@ -441,6 +442,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 
 {{trans-top|battle}}
 * Afrikaans: {{t|af|geveg}}
+* Albanian: {{t+|sq|betejë|f}}
 * Armenian: {{t+|hy|մարտ}}
 * Azerbaijani: {{t+|az|döyüş}}
 * Basque: {{t|eu|gudu}}, {{t|eu|bataila}}
@@ -463,13 +465,16 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Italian: {{t+|it|battaglia|f}}, {{t+|it|combattimento|m}}
 * Japanese: {{t+|ja|戦闘|tr=せんとう, sentô|sc=Jpan}}
 * Korean: {{t+|ko|전투}}
-{{trans-mid}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|شەڕ}}
+{{trans-mid}}
 * Latin: {{t+|la|pugna}}
 * Latvian: {{t|lv|kauja|f}}, {{t|lv|cīņa|f}}
 * Lithuanian: {{t+|lt|kova|f}}, {{t|lt|mūšis|m}}
 * Macedonian: {{t|mk|битка|f|sc=Cyrl}}, {{t|mk|бој|m|sc=Cyrl}}
+* Mongolian:
+*: Cyrillic: {{t+|mn|тэмцэл}}, {{t+|mn|дайн}}, {{t+|mn|тулаан}}
+*: Uyghurjin: {{t|mn|ᠲᠡᠮᠡᠴᠡᠯ}}, {{t|mn|ᠳᠠᠶᠢᠨ}}, {{t|mn|ᠲᠤᠯᠤᠭᠠᠨ}}
 * Norman: {{t|nrf|batâle|f}}
 * Norwegian: {{t+|no|slag}}
 * Old English: {{t|ang|ġefeoht|n}}
