--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -328,6 +328,9 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 |page=
 |passage=Just as it appeared Arsenal had taken the sting out of the tie, Johnson produced a moment of outrageous quality, '''thundering''' a bullet of a left foot shot out of the blue and into the top left-hand corner of Wojciech Szczesny's net with the Pole grasping at thin air.}}
 
+=====Conjugation=====
+{{en-conj-simple}}
+
 ====Derived terms====
 * {{sense|to say something with a loud, threatening voice}} {{l|en|thunderer}}
 
