--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -1,5 +1,6 @@
 {{also|Appendix:Variations of "ie"}}
 ==English==
+{{rfm|en|section=Big man ting, this bloke wants to delete e.g.}}
 
 ===Alternative forms===
 * {{l|en|i. e.}}
