--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -42,6 +42,7 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 ----
 
 ==Latin==
+{{rfm|la|section=Translingual bibliography terms}}
 
 ===Alternative forms===
 * {{sense|abbreviation}} {{l|la|etc.}}, {{l|la|etc}}, {{l|la|&c.}}, {{l|la|et c.}}
@@ -61,6 +62,7 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 ----
 
 ==Middle English==
+{{rfm|enm|section=Translingual bibliography terms}}
 
 ===Alternative forms===
 * {{alter|enm|etc.|& cetera|&c}}
@@ -85,6 +87,7 @@ Borrowed from {{bor|enm|la|et cetera}}.
 ----
 
 ==Polish==
+{{rfm|pl|section=Translingual bibliography terms}}
 
 ===Alternative forms===
 * {{q|abbreviated}} {{l|pl|etc.}}
@@ -108,6 +111,7 @@ From {{bor|pl|la|et cētera}}.
 ----
 
 ==Portuguese==
+{{rfm|pt|section=Translingual bibliography terms}}
 
 ===Phrase===
 {{head|pt|phrase|head=[[et]] [[cetera]]}}
@@ -117,6 +121,7 @@ From {{bor|pl|la|et cētera}}.
 ----
 
 ==Romanian==
+{{rfm|ro|section=Translingual bibliography terms}}
 
 ===Adverb===
 {{ro-adv}}
@@ -126,6 +131,7 @@ From {{bor|pl|la|et cētera}}.
 ----
 
 ==Swedish==
+{{rfm|sv|section=Translingual bibliography terms}}
 
 ===Alternative forms===
 * {{l|sv|etcetera}}
