t+ka:[[ფილიალი]] ([[WT:EDIT|Assisted]]) <branch#61202070>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -260,6 +260,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Estonian: {{t|et|filiaal}}
 * Finnish: {{t|fi|toimipaikka}}; {{t|fi|sivukonttori}}, {{t|fi|haarakonttori}}, {{t|fi|haaraosasto}}, {{t|fi|haaraliike}}
 * French: {{t+|fr|filiale|f}}, {{t+|fr|succursale|f}}
+* Georgian: {{t|ka|ფილიალი}}
 * German: {{t+|de|Zweigstelle|f}}, {{t+|de|Filiale|f}}
 * Greek: {{t+|el|υποκατάστημα|n|sc=Grek}}
 * Hebrew: {{t+|he|סְנִיף|m|tr=snif}}
