--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -75,6 +75,7 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 # {{surname|zh}}
 
 ====Synonyms====
+{{zh-dial}}
 {{zh-dial|早安}}
 {{zh-dial|早餐}}
 
