--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -71,7 +71,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 * Finnish: {{t|fi|pistohaava}}
 * Galician: {{t|gl|puñalada|f}}
 * German: {{t+|de|Stichwunde|f}}
-* Ilocano: {{t|ilo|bagkong}}
+* Ilocano: {{t|ilo|bagkong}}, {{t|ilo|bangig}}
 * Italian: {{t+|it|coltellata|f}}, {{t+|it|pugnalata|f}}
 {{trans-mid}}
 * Norwegian: {{t+|no|stikk|n}}
