--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -129,7 +129,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 *: Upper Sorbian: {{t|hsb|Zjednoćene kralestwo}}
 * Spanish: {{t+|es|Reino Unido|m}}, {{t|es|Reino Unido de Gran Bretaña e Irlanda del Norte|m}}
 * Swahili: {{t|sw|Ufalme wa Muungano}}
-* Swedish: {{t+|sv|Förenade kungariket}}
+* Swedish: {{t+|sv|Förenade kungariket|n}}
 * Tagalog: {{t|tl|Reyno Unido}}
 * Tajik: {{t+|tg|Подшоҳии Муттаҳида}}
 * Tamil: {{t+|ta|ஐக்கிய இராச்சியம்}}
