--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -66,7 +66,7 @@
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
 * Hausa: {{t|ha|Jamhuriyar Cak}}
 * Hebrew: {{t|he|צֶ׳כְיָה|f|tr=Chekhia|sc=Hebr}}, {{t|he|הרפובליקה הצ׳כית|tr=ha-Repubeliqah ha-Cheikia|alt=הָרֶפּוּבְּלִיקָה הַצֵ'כִית}}
-* Hindi: {{t|hi|चेक रिपब्लिक}}, {{t+|hi|चेक}}
+* Hindi: {{t|hi|चेक रिपब्लिक}}, {{t+|hi|चेक}}, {{t+|hi|चेक गणराज्य|m}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}, {{t+|hu|Csehország}}
 * Icelandic: {{t|is|Tékkneska lýðveldið|n}}, {{t+|is|Tékkland|n}}
 * Ido: {{t+|io|Chekia}}
@@ -78,17 +78,18 @@
 * Kabardian: {{t|kbd|Чехиэ}}
 * Kannada: {{t+|kn|ಜೆಕ್|sc=Knda}}
 * Karakalpak: {{t|kaa|Shexiya}}
+* Kashubian: {{t+|csb|Czeskô Repùblika|f}}
 * Kazakh: {{t|kk|Чех Республикасы|sc=Cyrl}}, {{t|kk|Чехия|sc=Cyrl}}
 * Khmer: {{t+|km|សាធារណរដ្ឋឆែក}}, {{t+|km|ឆែក}}
 * Komi-Permyak: {{t|koi|Ческо}}
 * Korean: {{t|ko|^체코 공화국}}, {{t+|ko|^체코}}
 * Kurdish:
-*: Northern Kurdish: {{t+|kmr|Komara Çêkiyayê}}
+*: Northern Kurdish: {{t+|kmr|Komara Çêkiyayê}}, {{t|kmr|Çekya}}
 * Kyrgyz: {{t|ky|Чех Республикасы|sc=Cyrl}}, {{t+|ky|Чехия|sc=Cyrl}}
 * Lao: {{t|lo|ສາທາລະນະລັດແຊັກ}}, {{t|lo|ເຊັກກີ}}
 * Latin: {{t|la|Respublica Cecha|f}}, {{t|la|Cechia|f}}, {{t|la|Czechia|f}}, {{t|la|Tzechia|f}}
-* Latvian: {{t|lv|Čehijas Republika|f}}, {{t+|lv|Čehija|f}}
 {{trans-mid}}
+* Latvian: {{t|lv|Čehijas Republika|f}}, {{t+|lv|Čehija|f}}
 * Lithuanian: {{t+|lt|Čekijos Respublika|f}}, {{t+|lt|Čekija|f}}
 * Luxembourgish: {{t+|lb|Tschechesch Republik}}, {{t+|lb|Tschechei|alt=d'Tschechei|f}}
 * Macedonian: {{t|mk|Че́шка Репу́блика|f|sc=Cyrl}}, {{t+|mk|Че́шка|f|sc=Cyrl}}, {{q|rarely}} {{t|mk|Че́хија|f|sc=Cyrl}}
@@ -104,15 +105,18 @@
 *: Bokmål: {{t|nb|Den tsjekkiske republikk|m}}, {{t+|nb|Tsjekkia|n}}
 *: Nynorsk: {{t|nn|Den tsjekkiske republikken|m}}, {{t+|nn|Tsjekkia|n}}
 * Occitan: {{t+|oc|Republica Chèca|f}}, {{t+|oc|Chequia|f}}
+* Oriya: {{t|or|ଚେକ୍ ଗଣରାଜ୍ୟ}}
 * Ossetian: {{t|os|Чехи|sc=Cyrl}}
+* Pashto: {{t|ps|چک جمهوریت|m|tr=ček ǰamhuryát}}
 * Persian: {{t+|fa|جمهوری چک|tr=jomhuri-ye ček|sc=fa-Arab}}, {{t+|fa|چک|tr=ček|sc=fa-Arab}}
 * Polish: {{t+|pl|Republika Czeska|f}}, {{t+|pl|Czechy|p}}
 * Portuguese: {{t+|pt|República Tcheca}}, {{t+|pt|Chéquia|f}}, {{t+|pt|Tchéquia|f}}
+* Punjabi: {{t|pa|ਚੈੱਕ ਗਣਰਾਜ}}
 * Quechua: {{t|qu|Chiksuyu}}
 * Romanian: {{t+|ro|Republica Cehă|f}}, {{t+|ro|Cehia|f}}
 * Romansch: {{t|rm|Republica Tscheca|f}}, {{t|rm|Tschechia|f}}
 * Russian: {{t+|ru|Че́шская Респу́блика|f}}, {{t+|ru|Че́хия|f}}
-* Rusyn: {{t|rue|Че́сько|n|sc=Cyrl}}
+* Rusyn: {{t|rue|Че́сько|n|sc=Cyrl}}, {{t|rue|Че́ська Репу́блика|f}} {{qualifier|Pannonian}}
 * Scottish Gaelic: {{t|gd|Seic|alt=an t-Seic|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Че̏шка̄ Репу̀блика|f}}, {{t|sh|Че̏шка̄|f}}
@@ -123,8 +127,8 @@
 * Slovak: {{t|sk|Česká republika|f}}, {{t+|sk|Česko|n}}
 * Slovene: {{t|sl|Čéška Repúblika|f}}, {{t+|sl|Čéška|f}}
 * Sorbian:
-*: Lower Sorbian: {{t|dsb|Česka|f}}
-*: Upper Sorbian: {{t|hsb|Čěska|f}}
+*: Lower Sorbian: {{t|dsb|Česka|f}}, {{t|dsb|Česka republika|f}}
+*: Upper Sorbian: {{t|hsb|Čěska|f}}, {{t|hsb|Čěska republika|f}}
 * Spanish: {{t+|es|República Checa|f}}, {{t+|es|Chequia|f}}
 * Swahili: {{t|sw|Jamhuri ya Ucheki}}, {{t|sw|Ucheki}}
 * Swedish: {{t|sv|Tjeckiska republiken|c}}, {{t+|sv|Tjeckien|n}}
@@ -139,7 +143,7 @@
 * Turkmen: {{t|tk|Çeh Republikasy}}, {{t|tk|Çehiýa}}
 * Udmurt: {{t|udm|Чехия|sc=Cyrl}}
 * Ukrainian: {{t|uk|Че́ська Респу́бліка|f}}, {{t+|uk|Че́хія|f}}
-* Urdu: {{t|ur|چیک|tr=cek|sc=ur-Arab}}
+* Urdu: {{t|ur|چیک|tr=cek|sc=ur-Arab}}, {{t|ur|چیک جمہوریہ|tr=cek jamhūriya}}
 * Uyghur: {{t|ug|چېخ جۇمھۇرىيەتى|sc=ug-Arab}}, {{t|ug|چېخ|sc=ug-Arab}}
 * Uzbek: {{t|uz|Chex Respublikasi}}, {{t+|uz|Chexiya}}
 * Vietnamese: {{t|vi|Cộng hòa Séc}}, {{t|vi|Séc}}
