--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -33,7 +33,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 #*: For life is quite absurd / And death's the final word / You must always face the '''curtain''' with a bow.
 # {{lb|en|architecture}} That part of a wall of a building which is between two [[pavilion]]s, [[tower]]s, etc.
 # {{lb|en|obsolete|derogatory}} A [[flag]]; an [[ensign]].
-#: {{rfquotek|en|Shakespeare}}
+#* {{RQ:Shakespeare Henry 5|4|2|passage=Their ragged '''curtains''' poorly are let loose}}
 
 ====Derived terms====
 {{top2}}
