--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -66,7 +66,7 @@
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
 * Hausa: {{t|ha|Jamhuriyar Cak}}
 * Hebrew: {{t|he|צֶ׳כְיָה|f|tr=Chekhia|sc=Hebr}}, {{t|he|הרפובליקה הצ׳כית|tr=ha-Repubeliqah ha-Cheikia|alt=הָרֶפּוּבְּלִיקָה הַצֵ'כִית}}
-* Hindi: {{t|hi|चेक रिपब्लिक}}, {{t+|hi|चेक}}, {{t+|hi|चेक गणराज्य|m}}
+* Hindi: {{t+|hi|चेक गणराज्य|m}}, {{t+|hi|चेक}}, {{t|hi|चेक रिपब्लिक}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}, {{t+|hu|Csehország}}
 * Icelandic: {{t|is|Tékkneska lýðveldið|n}}, {{t+|is|Tékkland|n}}
 * Ido: {{t+|io|Chekia}}
@@ -84,7 +84,7 @@
 * Komi-Permyak: {{t|koi|Ческо}}
 * Korean: {{t|ko|^체코 공화국}}, {{t+|ko|^체코}}
 * Kurdish:
-*: Northern Kurdish: {{t+|kmr|Komara Çêkiyayê}}, {{t|kmr|Çekya}}
+*: Northern Kurdish: {{t|kmr|Komara Çek}}, {{t|kmr|Çekya}}
 * Kyrgyz: {{t|ky|Чех Республикасы|sc=Cyrl}}, {{t+|ky|Чехия|sc=Cyrl}}
 * Lao: {{t|lo|ສາທາລະນະລັດແຊັກ}}, {{t|lo|ເຊັກກີ}}
 * Latin: {{t|la|Respublica Cecha|f}}, {{t|la|Cechia|f}}, {{t|la|Czechia|f}}, {{t|la|Tzechia|f}}
