t+rue:[[Чехія]] ([[WT:EDIT|Assisted]]) <Czech Republic#61213910>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -116,7 +116,7 @@
 * Romanian: {{t+|ro|Republica Cehă|f}}, {{t+|ro|Cehia|f}}
 * Romansch: {{t|rm|Republica Tscheca|f}}, {{t|rm|Tschechia|f}}
 * Russian: {{t+|ru|Че́шская Респу́блика|f}}, {{t+|ru|Че́хия|f}}
-* Rusyn: {{t|rue|Че́сько|n|sc=Cyrl}}, {{t|rue|Че́ська Репу́блика|f}} {{qualifier|Pannonian}}
+* Rusyn: {{t|rue|Че́сько|n|sc=Cyrl}}, {{t|rue|Че́ська Репу́блика|f}} {{qualifier|Pannonian}}, {{t|rue|Че́хія|f}}
 * Scottish Gaelic: {{t|gd|Seic|alt=an t-Seic|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Че̏шка̄ Репу̀блика|f}}, {{t|sh|Че̏шка̄|f}}
