--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -26,7 +26,7 @@
 {{trans-top|id=Q213|country in Central Europe}}
 * Abkhaz: {{t|ab|Чехиа|sc=Cyrl}}
 * Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
-* Albanian: {{t|sq|Çeke|f}}
+* Albanian: {{t|sq|Çeke|f}}, {{t+|sq|Republika Çeke|f}}
 * Amharic: {{t|am|ቼክ|sc=Ethi}}
 * Arabic: {{t|ar|جُمْهُورِيَّةْ اَلتّْشِيك|f}}, {{t|ar|اَلتّْشِيك|f}}
 *: Hijazi Arabic: {{t|acw|التشيك|tr=at-tšīk|sc=Arab}}
