--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -23,7 +23,8 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 # {{lb|en|by extension}} A person or thing that is the best example of a certain profession or some doing.
 #: {{syn|en|Thesaurus:exemplar|Thesaurus:model}}
 #: {{ux|en|That man is an '''icon''' in the business; he personifies loyalty and good business sense.}}
-# {{lb|en|graphical user interface}} A small picture that represents something (such as an icon on a computer screen which when clicked performs some function.)
+# {{lb|en|graphical user interface}} A small picture that represents something.
+#: ''Click the loudspeaker '''icon''' to configure audio settings.''
 # {{lb|en|linguistics}} A word, character, or sign whose form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons.
 #: {{cot|en|symbol|index}}.
 
