t+kac:[[htaw bat]] ([[WT:EDIT|Assisted]]) <butter#61225837>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -263,6 +263,7 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 * Italian: {{t+|it|burro|m}}
 * Japanese: {{t+|ja|バター|tr=batā}}, {{t|ja|牛酪|tr=ぎゅうらく, gyūraku|sc=Jpan}}, {{t+|ja|乳酪|tr=にゅうらく, nyūraku}}
 * Javanese: {{t|jv|mertéga}}
+* Jingpho: {{t|kac|htaw bat}}
 * Kannada: {{t+|kn|ಬೆಣ್ಣೆ}}
 * Kazakh: {{t|kk|май}}, {{t|kk|сармай}}, {{t|kk|сары май}}
 * Khmer: {{t|km|បឺរ}}, {{t|km|ខ្លាញ់ទឹកដោះ}}
