--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -531,6 +531,7 @@ See {{m|en|comma}}.
 [[Category:English raising verbs]]
 [[Category:English verb forms using redundant wikisyntax]]
 [[Category:English verbs with base form identical to past participle]]
+[[Category:en:Bodily fluids]]
 [[Category:en:Punctuation marks]]
 [[Category:en:Sex]]
 
