--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -122,6 +122,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Mylor Bridge
 |Newby Bridge
 |Norton Bridge
+|Pooley Bridge
 |Pye Bridge
 |[[Roybridge]], [[Roy Bridge]]
 |Schering bridge
