--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -501,9 +501,11 @@ The meaning of ''semen or female ejaculatory discharge'' is considered vulgar sl
 {{en-interj}}
 
 # An [[exclamation]] to express [[annoyance]].
-#: {{ux|en|'''Come come'''! Stop crying.&emsp; '''Come''' now! You must eat it.}}
+#: {{ux|en|'''Come come'''! Stop crying.}}
+#: {{ux|en|'''Come''' now! You must eat it.}}
 # An [[exclamation]] to express [[encouragement]], or to precede a request.
-#: {{ux|en|'''Come come'''! You can do it.&emsp; '''Come''' now! It won't bite you.}}
+#: {{ux|en|'''Come come'''! You can do it.}}
+#: {{ux|en|'''Come''' now! It won't bite you.}}
 #* {{RQ:Frgsn Zlnstn|I}}
 #*: “I'm through with all pawn-games,” I laughed. “'''Come''', let us have a game of lansquenet. Either I will take a farewell fall out of you or you will have your sevenfold revenge”.
 
