--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -181,14 +181,14 @@ From {{der|ja|ltc|sort=い|-}} {{ltc-l|易|id=1}}.
 ==Korean==
 
 ===Etymology 1===
-From {{der|ko|ltc|-}} {{ltc-l|易|id=2}}. 
-
-{{collapse|
-* {{hanja-hunmong|억|ek|儒學#상34A|hun=밧ᄭᅩᆯ〮 억}} 
-* {{hanja-sinjeung|역|yek|hun=밧골 역}}
-|Historical readings
-|bg=#FFFFFF}}
-
+From {{der|ko|ltc|sort=역|-}} {{ltc-l|易|id=2}}. 
+{{hanja-ety
+|dk={{hanja-dongguk|역〮|yék}}
+|m={{hanja-hunmong|역|yek|儒學#상34A}} 
+|mh=밧ᄭᅩᆯ〮 역
+|m2={{hanja-sinjeung|역|yek}}
+|m2h=밧골 역
+}}
 ====Pronunciation====
 {{ko-hanja-pron|역}}
 
@@ -209,13 +209,13 @@ From {{der|ko|ltc|-}} {{ltc-l|易|id=2}}.
 {{der-bottom}}
 
 ===Etymology 2===
-From {{der|ko|ltc|-}} {{ltc-l|易|id=1}}. 
-
-{{collapse|
-* {{hanja-sinjeung|이|i|hun=쉬울 이 去聲}}
-|Historical readings
-|bg=#FFFFFF}}
-
+From {{der|ko|ltc|sort=이|-}} {{ltc-l|易|id=1}}. 
+{{hanja-ety
+|dk={{hanja-dongguk|잉〮|í|i=y}}
+|m={{hanja-sinjeung|이|i}}
+|mh=쉬울 이<ref>去聲</ref>
+|ref=<references/>
+}}
 ====Pronunciation====
 {{ko-hanja-pron|이|l=y}}
 
