-bad translation <straight#61254978>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -300,7 +300,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * German: {{t|de|unverdünnt}}, {{t+|de|rein}}, {{t+|de|pur}}
 * Greek: {{t+|el|σκέτος}}
 {{trans-mid}}
-* Italian: {{t+|it|liscio}}, {{t+|it|puro|m}}, {{t|it|non innacquato}}
+* Italian: {{t+|it|liscio}}, {{t+|it|puro|m}}
 * Japanese: {{t|ja|ストレート|tr=sutorēto}}
 * Macedonian: {{t|mk|чист|m}}
 * Portuguese: {{t+|pt|puro}}
