--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -275,13 +275,22 @@ The {{m|en|Singapore}} sense derives from the pre-[[World War Two]] kanji spelli
 ==Korean==
 
 ===Etymology===
-From {{der|ko|ltc|-}} {{ltc-l|星|id=1}}. {{hanja-hunmong|셔ᇰ|syeng|天文#상01A}}
+From {{der|ko|ltc|sort=성|-}} {{ltc-l|星|id=1}}.
+{{hanja-ety
+|dk={{hanja-dongguk|셔ᇰ|syèng}}
+|m={{hanja-hunmong|셔ᇰ|syèng|天文#상01A}}
+|mh=[[별|별〯]] 셔ᇰ 
+|em={{hanja-juhae|셩|syeng}}
+|emun=[[별]] 셩
+}}
+===Pronunciation===
+{{ko-hanja-pron|성}}
 
 ===Hanja===
 {{ko-hanja-search}}
 {{ko-hanja/new|별|성}}
 
-# {{hanja form of|성|[[star]], [[planet]]}}
+# {{hanja form of|성|[[star]]; [[planet]]}}
 
 ====Compounds====
 {{der-top3|Compounds}}
