--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -45,7 +45,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 # {{lb|en|rail transport}} A [[branch line]].
 
 ====Synonyms====
-* {{sense|part of a tree}} {{l|en|bough}}, {{l|en|tillow}}, {{l|en|twig}}; ''see also'' [[Thesaurus:tree]]
+* {{sense|part of a tree}} {{l|en|bough}}, {{l|en|limb}}, {{l|en|tillow}}, {{l|en|twig}}; ''see also'' [[Thesaurus:tree]]
 
 ====Derived terms====
 {{der3|en
