/* Translations */ BA <feel#61284988>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -97,6 +97,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Armenian: {{t+|hy|զգալ}}, {{t+|hy|շոշափել}}
 * Aromanian: {{t|rup|simtu}}, {{t|rup|sãmtu}}
 * Asturian: {{t+|ast|sentir}}
+* Bashkir: {{t|ba|һиҙеү}}
 * Belarusian: {{t|be|адчува́ць|impf|sc=Cyrl}}, {{t|be|адчу́ць|pf|sc=Cyrl}}
 * Bulgarian: {{t+|bg|опипвам|sc=Cyrl}}
 * Chinese:
@@ -153,6 +154,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Aromanian: {{t|rup|simtu}}
 * Asturian: {{t+|ast|sentir}}
 * Azerbaijani: {{t|az|hiss etmək}}, {{t+|az|duymaq}}
+* Bashkir: {{t|ba|һиҙеү}}, {{t|ba|тойоу}}
 * Belarusian: {{t|be|адчува́ць|impf|sc=Cyrl}}, {{t|be|адчу́ць|pf|sc=Cyrl}}, {{t|be|чуць|impf|sc=Cyrl}}, {{t|be|пачу́ць|pf|sc=Cyrl}}
 * Bengali: {{t|bn|বোধ করা|sc=Beng}}
 * Bulgarian: {{t+|bg|усе́щам|impf|sc=Cyrl}}, {{t+|bg|чу́вствам|impf|sc=Cyrl}}
