t+hi:[[सिम्त]] ([[WT:EDIT|Assisted]]) <zenith#61287218>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -64,6 +64,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 * German: {{t+|de|Zenit|m}}
 * Greek: {{t+|el|ζενίθ|n}}
 * Hebrew: {{t+|he|זֶנִית|f|tr=zenit}}
+* Hindi: {{t+|hi|सिम्त|f}}
 * Indonesian: {{t+|id|zenit}}
 * Irish: {{t|ga|buaic na spéire|f}}
 * Italian: {{t+|it|zenit|m}}
@@ -133,7 +134,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 * German: {{t+|de|Zenit|m}}
 * Greek: {{t+|el|απόγειο|n}}, {{t+|el|ζενίθ|n}}
 *: Ancient: {{t|grc|ἀκμή|f}}
-* Hindi: {{t+|hi|पराकाष्ठा|f}}, {{t+|hi|स्वर्ग|m}}
+* Hindi: {{t+|hi|पराकाष्ठा|f}}, {{t+|hi|स्वर्ग|m}}, {{t+|hi|सिम्त|f}}
 * Italian: {{t+|it|zenit|m}}, {{t+|it|culmine|m}}, {{t+|it|apice|m}}
 {{trans-mid}}
 * Japanese: {{t+|ja|頂点|tr=ちょうてん, chōten}}, {{t+|ja|絶頂|tr=ぜっちょう, zecchō}}
