t+ceb:[[matahom]] ([[WT:EDIT|Assisted]]) <beautiful#61287367>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -84,6 +84,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Bulgarian: {{t+|bg|краси́в}}, {{t+|bg|прекра́сен}}
 * Burmese: {{t|my|လှသော|sc=Mymr}}, {{t+|my|လှပ|sc=Mymr}}
 * Catalan: {{t+|ca|bell|m}}, {{t+|ca|bella|f}}, {{t+|ca|formós|m}}, {{t|ca|formósa|f}}, {{t+|ca|bonic|m}}, {{t+|ca|bonica|f}}
+* Cebuano: {{t|ceb|matahom}} {{qualifier|of a female}}
 * Central Dusun: {{t|dtp|olumis}}
 * Chamicuro: {{t|ccc|pya'c̈homa}}, {{t|ccc|pewa puti'na}}
 * Chechen: {{t|ce|хаза}}
