/*Chinese*/replaced content with soft redirect <圲#61297069>

--- a/en/圲/圲.12980.wikitext
+++ b/en/圲/圲.12980.wikitext
@@ -4,27 +4,10 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=GHJ|ids=⿰土千}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0224.130|dkj=04892|hdz=10419.070|uh=5732|ud=22322}}
 
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=qiān
-|c=cin1
-|mc=y
-|oc=y
-|cat=
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{rfdef|zh|sort=土03}}
-
-===References===
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
+{{zh-see|圱|a}}
