--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -53,7 +53,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 # Of a bird, to be able to vocally reproduce words or phrases from a human language.
 #* {{quote-book|1=en|year=1936|author=Rollo Ahmed|title=The Black Art|publisher=Long|location=London|page=220|passage=Miles tremblingly confessed that it had, but to no purpose; a parrot being able to '''speak''' better in three weeks than a brazen head.}}
 # {{lb|en|transitive|archaic}} To address; to accost; to speak to.
-#* Bible, Ecclus. xiii. 6
+#* {{RQ:KJV|Ecclesiasticus|13|6}}
 #*: [He will] thee in hope; he will '''speak''' thee fair.
 #* {{RQ:Emerson Threnody}}
 #*: Each village senior paused to scan / And '''speak''' the lovely caravan.
