t+tr:[[simge]] ([[WT:EDIT|Assisted]]) <icon#61310913>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -215,6 +215,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Spanish: {{t+|es|icono|m}}, {{t+|es|ícono|m}}
 * Swedish: {{t+|sv|ikon|c}}, {{t+|sv|symbol|c}}
 * Thai: {{t|th|ไอคอน}}, {{t|th|สัญรูป}}
+* Turkish: {{t+|tr|simge}}
 * Uyghur: {{t|ug|سىنبەلگە}}, {{t|ug|ئايكون}}
 {{trans-bottom}}
 
