/*Vietnamese*/improved readings <圾#61311706>

--- a/en/圾/圾.12993.wikitext
+++ b/en/圾/圾.12993.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=6|four=47147|canj=GNHE|ids=⿰土及}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0224.220|dkj=04906|dj=0459.100|hdz=10420.040|uh=573E|ud=22334|bh=A7A3|bd=42915}}
 
 ----
@@ -18,11 +18,13 @@
 {{zh-pron
 |m=圾
 |c=saap3
+|mc=y
+|oc=y
 |mn=sap
 }}
 
 ====Definitions====
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # {{zh-only|垃圾|[[garbage]]; [[rubbish]]}}
 
@@ -38,7 +40,7 @@
 }}
 
 ====Definitions====
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # [[clod]]
 
@@ -55,14 +57,14 @@
 # {{rfdef|ja|sort=土04}}
 
 ====Readings====
-{{ja-readings|goon=[[ごう]] (gō)|kanon=[[ぎゅう]] (gyū)|kanyoon=[[きゅう]] (kyū)|kun=[[あやうい]] (ayaui)}}
+{{ja-readings|goon=ごう|kanon=ぎゅう|kanyoon=きゅう|kun=あやうい}}
 
 ----
 
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=급|rv=geup|mr=kŭp}}
+{{ko-hanja|급}}
 
 # {{rfdef|ko|sort=土04}}
 
@@ -71,6 +73,6 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|ngập|rs=土04}}
+{{vi-readings|hanviet=ngập|nom=ngập|rs=土04}}
 
 # {{rfdef|vi}}
