/*Vietnamese*/added reference; expanded readings <坊#61324283>

--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -8,7 +8,7 @@
 ====Derived characters====
 * {{l|mul|[[𠩝]]}}
 
-====References====
+===Further reading===
 {{Han ref|kx=0225.070|dkj=04924|dj=0459.270|hdz=10427.010|uh=574A}}
 
 ----
@@ -33,7 +33,7 @@
 }}
 
 ====Definitions====
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # [[lane]]; [[alley]]
 #* {{zh-x|^牛-巷-坊|Niuxiangfang {{gloss|alley in Futian District, [[Shenzhen]]}}}}
@@ -52,7 +52,7 @@
 }}
 
 ====Definitions====
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # [[workshop]]
 
@@ -66,7 +66,7 @@
 }}
 
 ====Definitions====
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # {{†}} {{zh-alt-form|防|tr=-}}
 ## [[dam]]; [[embankment]]
@@ -102,7 +102,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=[[방]]|rv=bang|mr=pang}}
+{{ko-hanja|방}}
 
 # {{rfdef|ko|sort=土04}}
 
@@ -111,6 +111,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''坊''' ([[phường]], [[phương]])
+{{vi-readings|hanviet=phường|nom=phương,phường|rs=土04}}
 
 # {{han tu form of|[[phường]]|ward}}
+
+===References===
+* [http://nomfoundation.org/common/nom_details.php?codepoint=574A Nom Foundation]
